force-app/main/default/objects/Partner_Tier__c/Partner_Tier__c.object-meta.xml
<CustomObject>
    <label>Partner Tier</label>
    <nameField>
        <label>Partner Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>