force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Gold Plus</fullName>
                <isActive>false</isActive>
                <label>Gold Plus</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>