force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_End_Date__c</fullName>
    <label>Partner Tier End Date</label>
    <type>Date</type>
</CustomField>