force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier_End_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_End_Reasoning__c</fullName>
    <label>Partner Tier End Reasoning</label>
    <length>200</length>
    <type>Text</type>
</CustomField>