force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier_Margin__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_Margin__c</fullName>
    <formula>IF( ISPICKVAL( Partner_Tier__c , &apos;Gold&apos;) , 0.3, IF(ISPICKVAL( Partner_Tier__c , &apos;Silver&apos;) , 0.2,IF(ISPICKVAL( Partner_Tier__c , &apos;Bronze&apos;) , 0.1,IF(ISPICKVAL( Partner_Tier__c , &apos;Gold Plus&apos;) , 0.3,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Tier Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>