force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_Number__c</fullName>
    <displayFormat>PT-{0000}</displayFormat>
    <label>Partner Tier Number</label>
    <type>AutoNumber</type>
</CustomField>