force-app/main/default/objects/Partner_Tier__c/fields/Partner_Tier_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_Start_Date__c</fullName>
    <label>Partner Tier Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>