force-app/main/default/objects/Partner_Tier__c/fields/PartnerTier_Status__c.field-meta.xml
<CustomField>
    <fullName>PartnerTier_Status__c</fullName>
    <label>Partner Tier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>