force-app/main/default/objects/Partner_Tier__c/validationRules/Partner_Tier_End_Reasoning_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Tier_End_Reasoning_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Partner_Tier_End_Date__c ) ), ISBLANK( Partner_Tier_End_Reasoning__c ) )</errorConditionFormula>
    <errorDisplayField>Partner_Tier_End_Reasoning__c</errorDisplayField>
    <errorMessage>Partner Tier End Reasoning is required when Partner Tier End Date is populated.</errorMessage>
</ValidationRule>