force-app/main/default/objects/Partner_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partner__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Partner_Tier__c</columns>
    <columns>Partner_Tier_Margin__c</columns>
    <columns>PartnerTier_Status__c</columns>
    <columns>Partner_Tier_Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>